--- a/index.html
+++ b/index.html
@@ -8,20 +8,6 @@
     <title>Ricardo Semião</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script>
-        document.getElementById('lastUpdated').onclick = function() {
-            alert('This page was last updated on ' + document.lastModified);
-            return false; // Prevent the default action
-        };
-    </script>
-    <script>
-        var navLinks = document.getElementsByClassName('nav-link');
-        for (var i = 0; i < navLinks.length; i++) {
-            if (navLinks[i].href == document.URL) {
-                navLinks[i].classList.add('current-page');
-            }
-        }
-    </script>
 </head>
 
 
@@ -32,8 +18,8 @@
     <div class="navbar">
         <nav>
             <ul>
-                <li><a href="https://ricardo-semiao.github.io/">Home</a></li>
-                <li><a href="https://ricardo-semiao.github.io/ricardo-semiao-cv/">CV</a></li>
+                <li><a class="nav-link" href="https://ricardo-semiao.github.io/">Home</a></li>
+                <li><a class="nav-link" href="https://ricardo-semiao.github.io/ricardo-semiao-cv/">CV</a></li>
             </ul>
         </nav>
     </div>
@@ -122,12 +108,10 @@
 </main>
 
 <footer>
-    <div class="footer">
-        <div>
-            <a href="#" id="lastUpdated"><i class="fas fa-info-circle"></i></a>
-        </div>
-    </div>
+    <div class="footer"></div>
 </footer>
+
+<script src="scripts.js"></script>
 
 </body>
 
