Separated universal and index styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ricardo Semião</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_site.css">
+    <link rel="stylesheet" href="style_index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
@@ -43,7 +44,7 @@
     </section>
 
     <section class="socials">
-        <h2>Socials</h2>
+        <h2 class="homepage-section">Socials</h2>
         <ul>
             <li><a href="https://github.com/ricardo-semiao"><i class="fab fa-github"></i> Github</a></li>
             <li><a href="mailto:ricardo.semiao@outlook.com"><i class="fas fa-envelope"></i> Email</a></li>
@@ -54,7 +55,7 @@
     </section>
 
     <section class="projects">
-        <h2>My projects</h2>
+        <h2 class="homepage-section">My projects</h2>
         <div class="multicolumn">
             <div>
             <p>Academic articles/tasks:</p>
