--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul>
                 <li><a class="nav-link" href="https://ricardo-semiao.github.io/">Home</a></li>
-                <li><a class="nav-link" href="https://ricardo-semiao.github.io/ricardo-semiao-cv/">CV</a></li>
+                <li><a class="nav-link" href="https://ricardo-semiao.github.io/cv/">CV</a></li>
             </ul>
         </nav>
     </div>
@@ -35,7 +35,8 @@
     <section class="intro">
         <div class="multicolumn">
             <div>
-                <p>Welcome! I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check some of my projects below!</p>
+                <h2>Welcome!</h2>
+                <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check some of my projects below!</p>
             </div>
             <div>
                 <img src="assets/profile.jpg" alt="Profile Picture" width="200px">
@@ -97,10 +98,10 @@
             </ul>
             </div>
             <div>
-            <p>Personal:</p>
+            <p>Homepage:</p>
             <ul>
-                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">this homepage</a></li>
-                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao-cv">curriculum</a></li>
+                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">Home</a></li>
+                <li><a href="https://github.com/ricardo-semiao/cv">CV</a></li>
             </ul>
             </div>
         </div>
@@ -109,7 +110,9 @@
 </main>
 
 <footer>
-    <div class="footer"></div>
+    <div class="footer">
+        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><i class="fab fa-github"></i> Ver código-fonte</a></p>
+    </div>
 </footer>
 
 <script src="scripts.js"></script>
