--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <nav>
             <ul>
                 <li><a class="nav-link" href="https://ricardo-semiao.github.io/">Home</a></li>
-                <li><a class="nav-link" href="https://ricardo-semiao.github.io/cv/">CV</a></li>
+                <li><a class="nav-link" href="cv/">CV</a></li>
+                <li><a class="nav-link" href="course-r/">RFCD</a></li>
+                <li><a class="nav-link" href="varutils/">Varutils</a></li>
             </ul>
         </nav>
     </div>
