--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a class="nav-link" href="https://ricardo-semiao.github.io/">Home</a></li>
                 <li><a class="nav-link" href="cv/">CV</a></li>
-                <li><a class="nav-link" href="course-r/">RFCD</a></li>
+                <li><a class="nav-link" href="rfcd/">RFCD</a></li>
                 <li><a class="nav-link" href="varutils/">Varutils</a></li>
             </ul>
         </nav>
@@ -71,7 +71,7 @@
             <div>
             <p>Educational materials:</p>
             <ul>
-                <li><a href="https://github.com/ricardo-semiao/course-r">course-r</a></li>
+                <li><a href="https://github.com/ricardo-semiao/rfcd">course-r</a></li>
                 <li><a href="https://github.com/ricardo-semiao/course-python">course-python</a></li>
             </ul>
             </div>
