Updated intro description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="multicolumn">
             <div>
                 <h2>Welcome!</h2>
-                <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check some of my projects below!</p>
+                <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
+                <p>You can find my CV (in portuguese), and the pages for some of my projects in the navbar.</p>
             </div>
             <div>
                 <img src="assets/profile.jpg" alt="Profile Picture" width="200px">
@@ -113,7 +114,7 @@
 
 <footer>
     <div class="footer">
-        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><i class="fab fa-github"></i> Ver código-fonte</a></p>
+        <p><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><i class="fab fa-github"></i> See source-code</a></p>
     </div>
 </footer>
 
