Added flex width to pfp and projects multicolumn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>You can find my CV (in portuguese), and the pages for some of my projects in the navbar.</p>
             </div>
             <div>
-                <img src="assets/profile.jpg" alt="Profile Picture" width="200px">
+                <img src="assets/profile.jpg" alt="Profile Picture" width="100%" height="auto">
             </div>
         </div>
     </section>
@@ -83,8 +83,6 @@
                 <li><a href="https://github.com/ricardo-semiao/vardiff">vardiff</a></li>
             </ul>
             </div>
-        </div>
-            <div class="multicolumn">
             <div>
             <p>Freelance projects:</p>
             <ul>
