Added responsivity to intro section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>You can find my CV (in portuguese), and the pages for some of my projects in the navbar.</p>
             </div>
             <div>
-                <img src="assets/profile.jpg" alt="Profile Picture" width="100%" height="auto">
+                <img class="fleximg" src="assets/profile.jpg" alt="Profile Picture">
             </div>
         </div>
     </section>
