--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 
 <main id="home">
 
-    <section class="home-section" id="intro">
+    <section id="intro">
         <div class="multicolumn">
-            <div>
+            <div id="intro-flextext">
                 <h2>Welcome!</h2>
                 <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
                 <p>You can find my CV (in portuguese), and the pages for some of my projects in the navbar.</p>
             </div>
-            <div>
-                <img class="fleximg" src="assets/profile.jpg" alt="Profile Picture">
+            <div id="intro-fleximg">
+                <img src="assets/profile.jpg" alt="Profile Picture" style="width: 100%;">
             </div>
         </div>
     </section>
 
-    <section class="home-section" id="socials">
+    <section id="socials">
         <h2 class="homepage-section">Socials</h2>
         <ul>
             <li><a href="https://github.com/ricardo-semiao"><i class="fab fa-github"></i> Github</a></li>
@@ -47,7 +47,7 @@
         </ul>
     </section>
 
-    <section class="home-section" id="projects">
+    <section id="projects">
         <h2 class="homepage-section">My projects</h2>
         <div class="multicolumn">
             <div>
