--- a/site_structure.html
+++ b/site_structure.html
@@ -1,10 +1,10 @@
 <header id="site-header">
     <nav>
         <ul>
-            <li><a class="site-nav-link" href="https://ricardo-semiao.github.io/">Home</a></li>
-            <li><a class="site-nav-link" href="cv/">CV</a></li>
-            <li><a class="site-nav-link" href="rfcd/">RFCD</a></li>
-            <li><a class="site-nnav-link" href="varutils/">Varutils</a></li>
+            <li><a class="site-nav-link" href="../">Home</a></li>
+            <li><a class="site-nav-link" href="../cv/">CV</a></li>
+            <li><a class="site-nav-link" href="../rfcd/">RFCD</a></li>
+            <li><a class="site-nnav-link" href="../varutils/">Varutils</a></li>
         </ul>
     </nav>
     <hr>
