--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ricardo Semião</title>
+    <link rel="icon" href="assets/icon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/icon.png" type="image/png">
+    <meta name="Ricardo Semião" content="Your Name">
+    <title>Ricardo Semião | Welcome!</title>
     <link rel="stylesheet" href="site_structure.css">
     <link rel="stylesheet" href="site_style.css">
     <link rel="stylesheet" href="home_style.css">
