--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="intro-flextext">
                 <h2>Welcome!</h2>
                 <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
-                <p>You can find my CV (in portuguese), and the pages for some of my projects in the navbar.</p>
+                <p>In the navar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
             </div>
             <div id="intro-fleximg">
                 <img src="assets/profile.jpg" alt="Profile Picture" style="width: 100%;">
@@ -64,7 +64,7 @@
             <div>
             <p>Educational materials:</p>
             <ul>
-                <li><a href="https://github.com/ricardo-semiao/rfcd">course-r</a></li>
+                <li><a href="https://github.com/ricardo-semiao/rfcd">rfcd</a></li>
                 <li><a href="https://github.com/ricardo-semiao/course-python">course-python</a></li>
             </ul>
             </div>
@@ -72,14 +72,12 @@
             <p>Code packages:</p>
             <ul>
                 <li><a href="https://github.com/ricardo-semiao/varutils">varutils</a></li>
-                <li><a href="https://github.com/ricardo-semiao/vardiff">vardiff</a></li>
             </ul>
             </div>
             <div>
             <p>Freelance projects:</p>
             <ul>
                 <li><a href="https://github.com/mevaldt/diversified_crypto">diversified_crypto</a></li>
-                <li><a href="https://github.com/ricardo-semiao/genero-itamaraty">genero-itamaraty</a></li>
             </ul>
             </div>
             <div>
@@ -88,13 +86,7 @@
                 <li><a href="https://github.com/ricardo-semiao/challenge-constdev">challenge-constdev</a></li>
                 <li><a href="https://github.com/ricardo-semiao/misc-allocator-ga">misc-allocator-ga</a></li>
                 <li><a href="https://github.com/ricardo-semiao/misc-general">misc-general</a></li>
-            </ul>
-            </div>
-            <div>
-            <p>Homepage:</p>
-            <ul>
-                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">Home</a></li>
-                <li><a href="https://github.com/ricardo-semiao/cv">CV</a></li>
+                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">This site</a></li>
             </ul>
             </div>
         </div>
