--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Ricardo Semião" content="Your Name">
+
+    <title>Ricardo Semião | Welcome!</title>
+
     <link rel="icon" href="assets/icon.png" type="image/png">
     <link rel="shortcut icon" href="assets/icon.png" type="image/png">
-    <meta name="Ricardo Semião" content="Your Name">
-    <title>Ricardo Semião | Welcome!</title>
-    <link rel="stylesheet" href="site_structure.css">
-    <link rel="stylesheet" href="site_style.css">
-    <link rel="stylesheet" href="home_style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <link rel="stylesheet" href="assets/site_structure.css">
+    <link rel="stylesheet" href="assets/site_style.css">
+    <link rel="stylesheet" href="assets/home_style.css">
 </head>
 
 
@@ -34,7 +38,7 @@
                 <p>In the navar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
             </div>
             <div id="intro-fleximg">
-                <img src="assets/profile.jpg" alt="Profile Picture" style="width: 100%;">
+                <img src="assets/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
             </div>
         </div>
     </section>
@@ -96,7 +100,7 @@
 
 <div id="site-footer-container"></div>
 
-<script src="site_structure.js"></script>
+<script src="assets/site_structure.js"></script>
 
 </body>
 
