Site: changed to site_assets structure

--- a/cv/index.html
+++ b/cv/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/icon.png" type="image/png">
-    <link rel="shortcut icon" href="assets/icon.png" type="image/png">
-    <meta name="Ricardo Semião" content="Your Name">
+    <meta name="Author" content="Ricardo Semião e Castro">
+    <link rel="icon" href="/site_assets/icon.png" type="image/png">
+    <link rel="shortcut icon" href="/site_assets/icon.png" type="image/png">
+
     <title>Ricardo Semião | CV</title>
-    <link rel="stylesheet" href="../site_structure.css">
-    <link rel="stylesheet" href="../site_style.css">
-    <link rel="stylesheet" href="cv_style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <link rel="stylesheet" href="/site_assets/site_structure.css">
+    <link rel="stylesheet" href="/site_assets/site_style.css">
+
+    <link rel="stylesheet" href="cv_style.css">
 </head>
 
 
@@ -132,7 +136,7 @@
 
 <div id="site-footer-container"></div>
 
-<script src="../site_structure.js"></script>
+<script src="/site_assets/site_structure.js"></script>
 
 </body>
 
