--- a/site_assets/site_structure.html
+++ b/site_assets/site_structure.html
@@ -2,9 +2,9 @@
     <nav>
         <ul>
             <li><a class="site-nav-link" href="/">Home</a></li>
-            <li><a class="site-nav-link" href="/cv">CV</a></li>
-            <li><a class="site-nav-link" href="/rfcd">RFCD</a></li>
-            <li><a class="site-nnav-link" href="/varutils">Varutils</a></li>
+            <li><a class="site-nav-link" href="/cv/">CV</a></li>
+            <li><a class="site-nav-link" href="/rfcd/">RFCD</a></li>
+            <li><a class="site-nnav-link" href="/varutils/">Varutils</a></li>
         </ul>
     </nav>
     <hr>
