Updated site_structure.js, corrected templates

--- a/index_template.html
+++ b/index_template.html
@@ -62,7 +62,7 @@
             <div>
             <p>Educational materials:</p>
             <ul>
-                <li><a href="https://github.com/ricardo-semiao/rfcd">rfcd</a></li>
+                <li><a href="https://ricardo-semiao.github.io/rfcd/">rfcd</a></li>
                 <li><a href="https://github.com/ricardo-semiao/course-python">course-python</a></li>
             </ul>
             </div>
