--- a/template_injector/components.html
+++ b/template_injector/components.html
@@ -9,8 +9,8 @@
 </div>
 
 <div data-component-name="site-style">
-    <link rel="stylesheet" href="site_assets/site_structure.css">
-    <link rel="stylesheet" href="site_assets/site_style.css">
+    <link rel="stylesheet" href="/site_assets/site_structure.css">
+    <link rel="stylesheet" href="/site_assets/site_style.css">
 </div>
 
 <div data-component-name="site-header">
@@ -36,5 +36,5 @@
 </div>
 
 <div data-component-name="site-scripts">
-    <script src="site_structure.js"></script>
+    <script src="/site_assets/site_structure.js"></script>
 </div>
