Added titlecard to components

--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -27,6 +27,12 @@
     </header>
 </div>
 
+<div data-component-name="titlecard"></div>
+    <div id="titlecard">
+        <h1>Ricardo Semião e Castro</h1>
+    </div>
+</div>
+
 <div data-component-name="site-footer">
     <footer id="site-footer">
         <div>
