Switched cv to english

--- a/index_template.html
+++ b/index_template.html
@@ -68,6 +68,7 @@
             <p>Code packages:</p>
             <ul>
                 <li><a href="https://github.com/ricardo-semiao/varutils">varutils</a></li>
+                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages">template_injector</a></li>
             </ul>
             </div>
             <div>
