--- a/cv/index.html
+++ b/cv/index.html
@@ -44,107 +44,107 @@
 <main id="cv">
 
     <section id="education">
-        <h2>Educação e Habilidades</h2> 
+        <h2>Education and Skills</h2> 
         <table>
             <tr>
-                <td>Educação</td>
-                <td>Graduação em Economia - FGV-EESP (2019 - 2023)</td>
+                <td>Education</td>
+                <td>Bachelor's Degree in Economics - FGV-EESP (2019 - 2023)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>Mestrado Acadêmico em Economia - FGV-EESP (2024 - em andamento)</td>
+                <td>Master's Degree in Economics - FGV-EESP (2024 - ongoing)</td>
             </tr>
             <tr>
-                <td>Idiomas</td>
-                <td>Inglês fluente - Certificado Cambridge English: Advanced (C1)</td>
+                <td>Languages</td>
+                <td>Fluent English - Cambridge English: Advanced (C1) Certificate</td>
             </tr>
             <tr>
-                <td>Softwares</td>
-                <td>R | Python | LaTeX | HTML/CSS | Stata | Pacote Office </td>
+                <td>Software</td>
+                <td>R | Python | LaTeX | HTML/CSS | Stata | Microsoft Office </td>
             </tr>
         </table>
     </section>
 
     <section id="experience">
-        <h2>Experiência</h2>
+        <h2>Experience</h2>
         <ul>
             <li class="job">
-                <h3>Assistente de pesquisa</h3>
+                <h3>Research Assistant</h3>
                 <div class="employer">
                     <h4>FGV-EESP &amp; Ripple</h4>
                     <p class="duration">10/2022 - 04/2023<p>
                 </div>
-                <p>Elaboração de <a href="https://github.com/mevaldt/diversified_crypto">aplicativo em R-Shiny</a> sobre otimização e análise de portfólio crypto.<p>
+                <p>Development of a <a href="https://github.com/mevaldt/diversified_crypto">R-Shiny application</a> for crypto portfolio optimization and analysis.<p>
             </li>
             <li class="job">
-                <h3>Monitor de Econometria I</h3>
+                <h3>Econometrics I Teaching Assistant</h3>
                 <div class="employer">
                     <h4>FGV-EESP</h4>
                     <p class="duration">02/2022 - 06/2023<p>
                 </div>
-                <p>Aplicação de exercícios, aulas teóricas, e de R.<p>
+                <p>Conducted exercises, theoretical classes, and R sessions.<p>
             </li>
             <li class="job">
-                <h3>Vice presidente, diretor de RH</h3>
+                <h3>Vice President, HR Director</h3>
                 <div class="employer">
-                    <h4>GVCode (liga de programação na FGV)</h4>
+                    <h4>GVCode (programming league at FGV)</h4>
                     <p class="duration">06/2020 - 12/2023<p>
                 </div>
-                <p>Coordenação de toda a atividade da liga, criação e aplicação de processo seletivo e trainee. Realização de projetos relacionados à programação e ciência de dados.<p>
+                <p>Coordinated all league activities, created and conducted selection processes and trainee programs. Executed projects related to programming and data science.<p>
             </li>
             <li class="job">
-                <h3>Professor particular de estatística, R e Python</h3>
-                <p>Aulas particulares para universitários. StackOverflow: 260 respostas, em mais de 125 tags; top 5% na comunidade R.<p>
+                <h3>Private Tutor in Statistics, R, and Python</h3>
+                <p>Private lessons for university students. StackOverflow: 260 answers in over 125 tags, top 5% in the R community.<p>
             </li>
         </ul>
     </section>
     
     <section id="projects">
-        <h2>Projetos e premiações</h2>
+        <h2>Projects and Awards</h2>
         <ul>
             <li class="project">
-                <a href="https://github.com/ricardo-semiao/challenge-constdev">Modelo de previsão</a> do fluxo de investimento na B³ com rede neural
-                <p><i class="fa fa-trophy"></i> 2º no Dev Challenge (2022, Constellation A. M.)<p>
+                <a href="https://github.com/ricardo-semiao/challenge-constdev">Prediction Model</a> for investment flow in B³ using a neural network.
+                <p><i class="fa fa-trophy"></i> 2nd place in the Dev Challenge (2022, Constellation A. M.).<p>
             </li>
             <li class="project">
-                Análise com regressão Ridge e Lasso sobre os determinantes do salário
-                <p><i class="fa fa-trophy"></i> 1º na categoria (2020, pela EESP)<p>
+                Analysis using Ridge and Lasso regression on salary determinants.
+                <p><i class="fa fa-trophy"></i> 1st place in the category (2020, by EESP)<p>
             </li>
             <li class="project">
-                Criação do pacote <a href="https://ricardo-semiao.github.io/varutils/">varutils</a> com funções para modelos de séries de tempo
-                <p><i class="fa fa-hourglass"></i> Em desenvolvimento<p>
+                Creation of the <a href="https://ricardo-semiao.github.io/varutils/">varutils package</a> with functions for time series models.
+                <p><i class="fa fa-hourglass"></i> In development.<p>
             </li>
             <li class="project">
-                <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Tese de graduação</a> sobre modelos SVAR aplicados à epidemiologia.
+                <a href="https://github.com/ricardo-semiao/article-covid-svardiff">Graduation Thesis</a> on SVAR models applied to epidemiology.
             </li>
             <li class="project">
-                Elaboração de <a href="https://ricardo-semiao.github.io/course-r/">material educativo</a> sobre R
-                <p><i class="fas fa-hourglass"></i> Em desenvolvimento<p>
+                Development of <a href="https://ricardo-semiao.github.io/course-r/">educational material</a> about R.
+                <p><i class="fas fa-hourglass"></i> In development.<p>
             </li>
             <li class="project">
-                Prova brasileia ANPEC, colocação para o mestrado em economia
-                <p><i class="fa fa-trophy"></i> 10º lugar (no ranking sem economia brasileira)<p>
+                ANPEC exam, the Brazil-wide admission for master's students in economics.
+                <p><i class="fa fa-trophy"></i> 10th place (excluding Brazilian economics).<p>
             </li>
             <li class="project">
-                Agrupamento de países por K-means e hierarchical clustering com dados da OMC
-                <p><i class="fas fa-trophy"></i> 2º na categoria (2021, pela EESP)<p>
+                Clustering of countries using K-means and hierarchical clustering with WTO data.
+                <p><i class="fas fa-trophy"></i> 2nd place in the category (2021, by EESP).<p>
             </li>
             <li class="project">
-                Veja mais em meu <a href="https://github.com/ricardo-semiao">Github</a>.
+                See more on <a href="https://github.com/ricardo-semiao">my Github</a>.
             </li>
         </ul>
     </section>
 
     <section id="others">
-        <h2>Outras atividades</h2>
+        <h2>Other Activities</h2>
         <ul>
-            <li>Trabalho voluntário durante o ensino médio. Atuação em creches, asilos e hospitais</li>
-            <li>Professor voluntário no projeto EESP Ensina (2022 - 2023). Aulas de economia para ensino médio</li>
-            <li>Membro do movimento escoteiro (2010 - 2021). Desenvolvimento de atividades de cunho socioambiental</li>
+            <li>Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
+            <li>Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
+            <li>Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
         </ul>
     </section>
     
-    <p style="margin: 0 0 16px 0;">Versão PDF: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao-cv/f936f27519220ffc99990a34e14875007ed0433c/text.pdf">download</a></p>
+    <p style="margin: 0 0 16px 0;">PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
 
 </main>
 
