--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <p>Code packages:</p>
             <ul>
                 <li><a href="https://github.com/ricardo-semiao/varutils">varutils</a></li>
+                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages">template_injector</a></li>
             </ul>
             </div>
             <div>
