Reorganized files to root-centric pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="home_style.css">
+    <link rel="stylesheet" href="/assets/home/home_style.css">
 </head>
 
 
