--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -27,7 +27,7 @@
     </header>
 </div>
 
-<div data-component-name="titlecard"></div>
+<div data-component-name="titlecard">
     <div id="titlecard">
         <h1>Ricardo Semião e Castro</h1>
     </div>
