Generalized aesthetic update

--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -24,12 +24,12 @@
 
     <section id="intro">
         <div class="multicolumn">
-            <div id="intro-flextext">
+            <div class="column-text">
                 <h2>Welcome!</h2>
                 <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
-                <p>In the navar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
+                <p>In the navbar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
             </div>
-            <div id="intro-fleximg">
+            <div class="column-img">
                 <img src="site_assets/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
             </div>
         </div>
@@ -47,44 +47,44 @@
     </section>
 
     <section id="projects">
-        <h2 class="homepage-section">My projects</h2>
+        <h2 class="homepage-section">My Projects</h2>
         <div class="multicolumn">
-            <div>
-            <p>Academic articles/tasks:</p>
-            <ul>
-                <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff">article-covid-svardiff</a></li>
-                <li><a href="https://github.com/ricardo-semiao/article-econometrics1">article-econometrics1</a></li>
-                <li><a href="https://github.com/ricardo-semiao/task-econometrics2">task-econometrics2</a></li>
-            </ul>
+            <div class="column-card">
+                <p>Academic articles/tasks:</p>
+                <ul>
+                    <li><a href="https://github.com/ricardo-semiao/article-covid-svardiff">article-covid-svardiff</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/article-econometrics1">article-econometrics1</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/task-econometrics2">task-econometrics2</a></li>
+                </ul>
             </div>
-            <div>
-            <p>Educational materials:</p>
-            <ul>
-                <li><a href="https://ricardo-semiao.github.io/rfcd/">rfcd</a></li>
-                <li><a href="https://github.com/ricardo-semiao/course-python">course-python</a></li>
-            </ul>
+            <div class="column-card">
+                <p>Educational materials:</p>
+                <ul>
+                    <li><a href="https://ricardo-semiao.github.io/rfcd/">rfcd</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/course-python">course-python</a></li>
+                </ul>
             </div>
-            <div>
-            <p>Code packages:</p>
-            <ul>
-                <li><a href="https://github.com/ricardo-semiao/varutils">varutils</a></li>
-                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages">template_injector</a></li>
-            </ul>
+            <div class="column-card">
+                <p>Code packages:</p>
+                <ul>
+                    <li><a href="https://github.com/ricardo-semiao/varutils">varutils</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages">template_injector</a></li>
+                </ul>
             </div>
-            <div>
-            <p>Freelance projects:</p>
-            <ul>
-                <li><a href="https://github.com/mevaldt/diversified_crypto">diversified_crypto</a></li>
-            </ul>
+            <div class="column-card">
+                <p>Freelance and challenges:</p>
+                <ul>
+                    <li><a href="https://github.com/mevaldt/diversified_crypto">diversified_crypto</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/challenge-constdev">challenge-constdev</a></li>
+                </ul>
             </div>
-            <div>
-            <p>Challenges and miscellaneous:</p>
-            <ul>
-                <li><a href="https://github.com/ricardo-semiao/challenge-constdev">challenge-constdev</a></li>
-                <li><a href="https://github.com/ricardo-semiao/misc-allocator-ga">misc-allocator-ga</a></li>
-                <li><a href="https://github.com/ricardo-semiao/misc-general">misc-general</a></li>
-                <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">This site</a></li>
-            </ul>
+            <div class="column-card">
+                <p>Miscellaneous:</p>
+                <ul>
+                    <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">This site</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/misc-allocator-ga">misc-allocator-ga</a></li>
+                    <li><a href="https://github.com/ricardo-semiao/misc-general">misc-general</a></li>
+                </ul>
             </div>
         </div>
         </section>
