--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -1,9 +1,7 @@
 <div data-component-name="site-meta">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="Author" content="Ricardo Semião e Castro">
-
     <link rel="icon" href="/site_assets/icon.png" type="image/png">
     <link rel="shortcut icon" href="/site_assets/icon.png" type="image/png">
 </div>
@@ -18,12 +16,11 @@
         <nav>
             <ul>
                 <li><a class="site-nav-link" href="/">Home</a></li>
-                <li><a class="site-nav-link" href="/cv/">CV</a></li>
+                <li><a class="site-nav-link" href="/cv.html">CV</a></li>
                 <li><a class="site-nav-link" href="/rfcd/">RFCD</a></li>
                 <li><a class="site-nnav-link" href="/varutils/">Varutils</a></li>
             </ul>
         </nav>
-        <hr>
     </header>
 </div>
 
