--- a/assets/cv/cv_template.html
+++ b/assets/cv/cv_template.html
@@ -123,7 +123,7 @@
         </ul>
     </section>
     
-    <p style="margin: 0 0 16px 0;">PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
+    <p id="cv-download">PDF version: <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">download</a> (in portuguese).</p>
 
 </main>
 
