--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="site-nav-link" href="/cv/">
+                        <a class="site-nav-link" href="/cv.html">
                             CV
                         </a>
                     </li>
@@ -40,7 +40,6 @@
                     </li>
                 </ul>
             </nav>
-            <hr/>
         </header>
         <div id="titlecard">
             <h1>
@@ -255,7 +254,7 @@
                     </li>
                 </ul>
             </section>
-            <p style="margin: 0 0 16px 0;">
+            <p id="cv-download">
                 PDF version: 
                 <a href="https://raw.githubusercontent.com/ricardo-semiao/ricardo-semiao.github.io/main/cv/pdf_cv/text.pdf">
                     download
