--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="site-nav-link" href="/cv/">
+                        <a class="site-nav-link" href="/cv.html">
                             CV
                         </a>
                     </li>
@@ -40,7 +40,6 @@
                     </li>
                 </ul>
             </nav>
-            <hr/>
         </header>
         <div id="titlecard">
             <h1>
@@ -50,7 +49,7 @@
         <main id="home">
             <section id="intro">
                 <div class="multicolumn">
-                    <div id="intro-flextext">
+                    <div class="column-text">
                         <h2>
                             Welcome!
                         </h2>
@@ -58,10 +57,10 @@
                             I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!
                         </p>
                         <p>
-                            In the navar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.
+                            In the navbar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.
                         </p>
                     </div>
-                    <div id="intro-fleximg">
+                    <div class="column-img">
                         <img src="site_assets/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
                     </div>
                 </div>
@@ -105,10 +104,10 @@
             </section>
             <section id="projects">
                 <h2 class="homepage-section">
-                    My projects
+                    My Projects
                 </h2>
                 <div class="multicolumn">
-                    <div>
+                    <div class="column-card">
                         <p>
                             Academic articles/tasks:
                         </p>
@@ -130,7 +129,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="column-card">
                         <p>
                             Educational materials:
                         </p>
@@ -147,7 +146,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="column-card">
                         <p>
                             Code packages:
                         </p>
@@ -164,9 +163,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="column-card">
                         <p>
-                            Freelance projects:
+                            Freelance and challenges:
                         </p>
                         <ul>
                             <li>
@@ -174,16 +173,21 @@
                                     diversified_crypto
                                 </a>
                             </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <p>
-                            Challenges and miscellaneous:
-                        </p>
-                        <ul>
                             <li>
                                 <a href="https://github.com/ricardo-semiao/challenge-constdev">
                                     challenge-constdev
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column-card">
+                        <p>
+                            Miscellaneous:
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">
+                                    This site
                                 </a>
                             </li>
                             <li>
@@ -194,11 +198,6 @@
                             <li>
                                 <a href="https://github.com/ricardo-semiao/misc-general">
                                     misc-general
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">
-                                    This site
                                 </a>
                             </li>
                         </ul>
