Cv: updated job classes

--- a/assets/cv/cv_template.html
+++ b/assets/cv/cv_template.html
@@ -49,31 +49,31 @@
         <ul>
             <li class="job">
                 <h3>Research Assistant</h3>
-                <div class="employer">
-                    <h4>FGV-EESP &amp; Ripple</h4>
-                    <p class="duration">10/2022 - 04/2023<p>
+                <div class="row-hfill">
+                    <p class="employer">FGV-EESP &amp; Ripple</p>
+                    <p class="duration">10/2022 - 04/2023</p>
                 </div>
-                <p>Development of a <a href="https://github.com/mevaldt/diversified_crypto">R-Shiny application</a> for crypto portfolio optimization and analysis.<p>
+                <p>Development of a <a href="https://github.com/mevaldt/diversified_crypto">R-Shiny application</a> for crypto portfolio optimization and analysis.</p>
             </li>
             <li class="job">
                 <h3>Econometrics I Teaching Assistant</h3>
-                <div class="employer">
-                    <h4>FGV-EESP</h4>
-                    <p class="duration">02/2022 - 06/2023<p>
+                <div class="row-hfill">
+                    <p class="employer">FGV-EESP</p>
+                    <p class="duration">02/2022 - 06/2023</p>
                 </div>
-                <p>Conducted exercises, theoretical classes, and R sessions.<p>
+                <p>Conducted exercises, theoretical classes, and R sessions.</p>
             </li>
             <li class="job">
                 <h3>Vice President, HR Director</h3>
-                <div class="employer">
-                    <h4>GVCode (programming league at FGV)</h4>
-                    <p class="duration">06/2020 - 12/2023<p>
+                <div class="row-hfill">
+                    <p class="employer">GVCode (programming league at FGV)</p>
+                    <p class="duration">06/2020 - 12/2023</p>
                 </div>
-                <p>Coordinated all league activities, created and conducted selection processes and trainee programs. Executed projects related to programming and data science.<p>
+                <p>Coordinated all league activities, created and conducted selection processes and trainee programs. Executed projects related to programming and data science.</p>
             </li>
             <li class="job">
                 <h3>Private Tutor in Statistics, R, and Python</h3>
-                <p>Private lessons for university students. StackOverflow: 260 answers in over 125 tags, top 5% in the R community.<p>
+                <p>Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
             </li>
         </ul>
     </section>
