Template: separated img assets

--- a/cv.html
+++ b/cv.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <meta content="Ricardo Semião e Castro" name="Author"/>
-        <link href="/site_assets/icon.png" rel="icon" type="image/png"/>
-        <link href="/site_assets/icon.png" rel="shortcut icon" type="image/png"/>
+        <link href="/site_assets/img/icon.png" rel="icon" type="image/png"/>
+        <link href="/site_assets/img/icon.png" rel="shortcut icon" type="image/png"/>
         <title>Ricardo Semião | CV</title>
         <link href="/site_assets/site_structure.css" rel="stylesheet"/>
         <link href="/site_assets/site_style.css" rel="stylesheet"/>
@@ -85,7 +85,7 @@
                     </li>
                     <li class="job">
                         <h3>Private Tutor in Statistics, R, and Python</h3>
-                        <p>Private lessons for university students. StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
+                        <p>Private lessons for university students. Active in StackOverflow: 260 answers in over 125 tags, top 5% in the R community.</p>
                     </li>
                 </ul>
             </section>
