--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <meta content="Ricardo Semião e Castro" name="Author"/>
-        <link href="/site_assets/icon.png" rel="icon" type="image/png"/>
-        <link href="/site_assets/icon.png" rel="shortcut icon" type="image/png"/>
+        <link href="/site_assets/img/icon.png" rel="icon" type="image/png"/>
+        <link href="/site_assets/img/icon.png" rel="shortcut icon" type="image/png"/>
         <title>Ricardo Semião | Welcome!</title>
         <link href="/site_assets/site_structure.css" rel="stylesheet"/>
         <link href="/site_assets/site_style.css" rel="stylesheet"/>
@@ -43,7 +43,7 @@
                         <p>In the navbar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
                     </div>
                     <div class="column-img">
-                        <img src="site_assets/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
+                        <img src="site_assets/img/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
                     </div>
                 </div>
             </section>
