--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Ricardo Semião e Castro">
-    <link rel="icon" href="/site_assets/icon.png" type="image/png">
-    <link rel="shortcut icon" href="/site_assets/icon.png" type="image/png">
+    <link rel="icon" href="/site_assets/img/icon.png" type="image/png">
+    <link rel="shortcut icon" href="/site_assets/img/icon.png" type="image/png">
 </div>
 
 <div data-component-name="site-style">
