Template: body font color and navbar blocks

--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -13,6 +13,7 @@
 
 <div data-component-name="site-header">
     <header id="site-header">
+        <div class="header-block"></div>
         <nav>
             <ul>
                 <li><a class="site-nav-link" href="/">Home</a></li>
@@ -21,6 +22,7 @@
                 <li><a class="site-nnav-link" href="/varutils/">Varutils</a></li>
             </ul>
         </nav>
+        <div class="header-block"></div>
     </header>
 </div>
 
