Template: refactored css with `rem` and better selectors

--- a/assets/cv/cv_template.html
+++ b/assets/cv/cv_template.html
@@ -86,7 +86,7 @@
                 </li>
                 <li class="project">
                     Analysis using Ridge and Lasso regression on salary determinants.
-                    <p><i class="fa fa-trophy"></i> 1st place in the category (2020, by EESP)<p>
+                    <p><i class="fa fa-trophy"></i> 1st place in the category (2020, by EESP).<p>
                 </li>
                 <li class="project">
                     Creation of the <a href="https://ricardo-semiao.github.io/varutils/">varutils package</a> with functions for time series models.
@@ -116,9 +116,9 @@
         <section id="others">
             <h2>Other Activities</h2>
             <ul>
-                <li>Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
-                <li>Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
-                <li>Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
+                <li class="other">Voluntary work during high school. Worked in daycare centers, nursing homes, and hospitals.</li>
+                <li class="other">Volunteer teacher in the EESP Ensina Project (2022 - 2023). Taught economics to high school students.</li>
+                <li class="other">Member of the Scout Movement (2010 - 2021). Developed socio-environmental activities.</li>
             </ul>
         </section>
         
