Home: solved flickering on explanation cards

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             </div>
 
-            <div class="explanation-card" style="display: none;">
+            <div class="explanation-card" style="visibility: hidden;">
                 <h4></h4>
                 <p></p>
             </div>
