--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
 
-            <div class="explanation-card" style="display: none;">
+            <div class="explanation-card" style="visibility: hidden;">
                 <h4></h4>
                 <p></p>
             </div>
