--- a/site_assets/components.html
+++ b/site_assets/components.html
@@ -19,7 +19,8 @@
                 <li><a class="site-nav-link" href="/">Home</a></li>
                 <li><a class="site-nav-link" href="/cv.html">CV</a></li>
                 <li><a class="site-nav-link" href="/rfcd/">RFCD</a></li>
-                <li><a class="site-nnav-link" href="/varutils/">Varutils</a></li>
+                <li><a class="site-nav-link" href="/varutils/">Varutils</a></li>
+                <li><a class="site-nav-link" href="/morphdown/">Morphdown</a></li>
             </ul>
         </nav>
         <div class="header-block"></div>
