--- a/assets/home/home_template.html
+++ b/assets/home/home_template.html
@@ -26,7 +26,7 @@
                 <div class="column-text">
                     <h2>Welcome!</h2>
                     <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
-                    <p>In the navbar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
+                    <p>In the navbar, you can find my CV, and the pages for some of my projects. Hover the projects below for a brief explanation of each.</p>
                 </div>
                 <div class="column-img">
                     <img src="site_assets/img/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
@@ -67,7 +67,7 @@
                     <p>Code packages:</p>
                     <ul>
                         <li><a href="https://ricardo-semiao.github.io/varutils" data-explanation="A R package for commonly needed ggplot graphs and utility functions on Vector Auto-Regressive analysis.">varutils</a></li>
-                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages" data-explanation="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a></li>
+                        <li><a href="https://github.com/ricardo-semiao/ricardo-semiao/tree/main/packages/template_injector" data-explanation="A simple, custom build, HTML template engine built in Python. It was built to power this site.">template_injector</a></li>
                         <li><a href="https://github.com/ricardo-semiao/morphdown" data-explanation="A R package to programmatically change the structure of R Markdown files. Built to convert my RFCD book into course-friendly slide presentations.">morphdown</a></li>
                     </ul>
                 </div>
