--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                     <a class="site-nav-link" href="/rfcd/">RFCD</a>
                 </li>
                 <li>
-                    <a class="site-nnav-link" href="/varutils/">Varutils</a>
+                    <a class="site-nav-link" href="/varutils/">Varutils</a>
+                </li>
+                <li>
+                    <a class="site-nav-link" href="/morphdown/">Morphdown</a>
                 </li>
             </ul>
         </nav>
